--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+  .line{
+    width: 100%;
+    height: 47px;
+    border-bottom: 1px solid black;
+    position: absolute;
+    }
+.app-container{
+  background-color: #F0F3F8;
+}
+.loading-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50%;
+
+}
