--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,10 @@
 .app-endPart{
   height: 20px;
 }
+.divider{
+  height: 100px;
+  width: 100%;
+}
 body{
   font-family: Arial, Helvetica, sans-serif;
   /* font-size: 14px; */
