--- a/src/component/Chart/chart.scss
+++ b/src/component/Chart/chart.scss
@@ -6,9 +6,11 @@
 //     stroke: transparent;
 
 // }
-// .test{
-//     // background-color: green;
-// }
+.test{
+    background-color: white;
+    margin: 10px;
+    border-radius: 20px;
+}
 
 .formControl{
     max-width: 100;
