--- a/src/component/Related/related.scss
+++ b/src/component/Related/related.scss
@@ -15,7 +15,7 @@
     margin: 5% 1% 0% 1%;
     width: 30%;
     background-color: white;
-    border-radius: 5;
+    border-radius: 20px;
     height: 250px;
     color: "#34374C";
 
