--- a/src/component/TopRate/topRate.scss
+++ b/src/component/TopRate/topRate.scss
@@ -1,7 +1,8 @@
 .topRateContainer{
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
+    min-height: 400px   ;
 }
 
 .topRateItemContainer{
@@ -18,7 +19,7 @@
 
 .topRateItemContainerCollapse{
     width: 100%;
-    height: 100%;
+    // height: 100%;
     // padding: 20px;
 
 }
@@ -52,15 +53,17 @@
 .topRateItemContainerExpand{
     // background-color: #6B75CA;
     width: 100%;
-    height: 100%;
+    // height: 100%;
+    // transition: 10s;
+    transition: height 350ms;
     // padding: 20px;
 
 }
 .topRateContainerCollapse{
     background-color: white;
     border-radius: 20px;
-    width: 17%;
-    height: 150px;
+    width: 20%;
+    height: 115px;
     margin: 5px;
     justify-content: center;
     display: flex;
@@ -71,7 +74,7 @@
 .topRateContainerExpand{
     background-color: #6B75CA;
     border-radius: 20px;
-    width: 25%;
+    width: 20%;
     height: auto;
     margin: 5px;
     justify-content: center;
@@ -84,20 +87,94 @@
     text-align: center;
 }
 
-.alert-enter {
-    opacity: 0;
-    transform: scale(0.9);
+
+:root {
+    --toggler-width: 120px;
+    --toggler-height: 40px;
+    --toggler-bg-color: #da110a;
+    --toggler-active-bg-color: #08853c;
+    --menu-starting-top: 0px;
+    --menu-ending-top: 45px;
+    --menu-width: 200px;
+    --menu-max-height: 200px;
+    --menu-bg-color: #188ddb;
+    --fade-from-color: transparent;
+    --fade-to-color: black;
+    --timeout: 350ms;
   }
-  .alert-enter-active {
-    opacity: 1;
-    transform: translateX(0);
-    transition: opacity 300ms, transform 300ms;
+  
+  .container {
+    position: relative;
   }
-  .alert-exit {
-    opacity: 1;
+  
+  .toggler {
+    position: relative;
+    z-index: 2;
+    width: var(--toggler-width);
+    height: var(--toggler-height);
+    background-color: var(--toggler-bg-color);
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    transition: background-color 350ms;
   }
-  .alert-exit-active {
-    opacity: 0;
-    transform: scale(0.9);
-    transition: opacity 300ms, transform 300ms;
+  
+  .toggler--active {
+    background-color: var(--toggler-active-bg-color);
+  }
+  
+  .menu {
+    position: absolute;
+    top: var(--menu-ending-top);
+    z-index: 1;
+    box-sizing: border-box;
+    width: var(--menu-width);
+    padding: 0 20px;
+    overflow: hidden;
+    background-color: var(--menu-bg-color);
+    border-radius: 5px;
+  }
+  
+  .list {
+    padding: 0;
+    list-style-type: none;
+  }
+  
+  .list-item {
+    padding: 5px 0;
+  }
+  
+  .display-enter {
+    top: var(--menu-starting-top);
+    width: var(--toggler-width);
+    max-height: var(--toggler-height);
+    color: var(--fade-from-color);
+    background-color: var(--toggler-bg-color);
+  }
+  
+  .display-enter-active {
+    top: var(--menu-ending-top);
+    width: var(--menu-width);
+    max-height: var(--menu-max-height);
+    color: var(--fade-to-color);
+    background-color: var(--menu-bg-color);
+    transition: all var(--timeout);
+  }
+  
+  .display-exit {
+    top: var(--menu-ending-top);
+    width: var(--menu-width);
+    max-height: var(--menu-max-height);
+    color: var(--fade-to-color);
+    background-color: var(--menu-bg-color);
+  }
+  
+  .display-exit-active {
+    top: var(--menu-starting-top);
+    width: var(--toggler-width);
+    max-height: var(--toggler-height);
+    color: var(--fade-from-color);
+    background-color: var(--toggler-bg-color);
+    transition: all var(--timeout);
   }
