--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,13 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   /* font-size: 14px; */
 }
+.chartAndTableParent{
+  display: flex;
+
+}
+.chartParentInApp{
+  width: 70%;
+}
+.tableParentInApp{
+  width: 30%;
+}
