--- a/src/component/Chart/chart.scss
+++ b/src/component/Chart/chart.scss
@@ -8,8 +8,10 @@
 // }
 .test{
     background-color: white;
-    margin: 10px;
+    margin-right: 10px;
     border-radius: 20px;
+    width: 60%;
+    max-height: 858px;
 }
 
 .formControl{
@@ -21,7 +23,6 @@
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
-    width: 30%;
     height: 200px;
     background-color: white;
     border-radius: 20px;
@@ -33,6 +34,9 @@
     display: flex;
     width: 100%;
     margin-left: 10%;
+    color: black;
+    font-size: 20px;
+    font-weight: 700;
 
 }
 .filterButons{
@@ -45,7 +49,15 @@ flex-direction: column;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: black;
+    font-size: 16px;
+    font-weight: 500;
 
+}
+.filterOneTitle{
+    color: black;
+    font-size: 16px;
+    font-weight: 500;
 }
 .filterOneBtn{
     display: flex;
