--- a/src/component/TopRate/topRate.scss
+++ b/src/component/TopRate/topRate.scss
@@ -1,6 +1,6 @@
 .topRateContainer{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     min-height: 400px   ;
 }
@@ -62,25 +62,32 @@
 .topRateContainerCollapse{
     background-color: white;
     border-radius: 20px;
-    width: 20%;
-    height: 115px;
+    width: 22%;
+    // height: 115px;
     margin: 5px;
     justify-content: center;
     display: flex;
     flex-direction: column;
     padding: 34px;
+    margin-top: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+
 
 }
 .topRateContainerExpand{
     background-color: #6B75CA;
     border-radius: 20px;
-    width: 20%;
+    width: 22%;
     height: auto;
     margin: 5px;
     justify-content: center;
     display: flex;
     flex-direction: column;
     padding: 34px;
+    margin-top: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 
 }
 .chartContainer{
