--- a/src/component/TopRate/topRate.scss
+++ b/src/component/TopRate/topRate.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    min-height: 400px   ;
+    min-height: 480px   ;
 }
 
 .topRateItemContainer{
@@ -32,6 +32,12 @@
     color: red;
     padding-top: 20px;
     font-size: 16px;
+}
+.zeroProgress{
+  color: green;
+  padding-top: 20px;
+  font-size: 16px;
+  left: 0;
 }
 .topRateConfirmed{
     color: black;
