add combo box in chart filter part

--- a/src/component/Related/related.scss
+++ b/src/component/Related/related.scss
@@ -18,7 +18,8 @@
     border-radius: 20px;
     height: 250px;
     color: "#34374C";
-
+    color: black;
+    text-decoration: none;
 }
 .relatedItemName{
     font-size: 18px;
