--- a/src/component/TopRate/topRate.scss
+++ b/src/component/TopRate/topRate.scss
@@ -69,6 +69,7 @@
     background-color: white;
     border-radius: 20px;
     width: 22%;
+    height: auto;
     // height: 115px;
     margin: 5px;
     justify-content: center;
