--- a/src/component/Table/table.scss
+++ b/src/component/Table/table.scss
@@ -1,9 +1,13 @@
 .tableContainer{
     width: 40%;
-    background-color: white;
+    // background-color: red;
     border-radius: 20px;
-    overflowX: auto;
+    // overflowX: auto;
     max-height: 858px;
     flexGrow: 1;
     
+}
+.stickyTable{
+    border-radius: 20px;
+    width: 100%;
 }
