--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@
   width: 100%;
 }
 body{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   /* font-size: 14px; */
 }
 .chartAndTableParent{
