--- a/src/component/Table/table.scss
+++ b/src/component/Table/table.scss
@@ -7,7 +7,15 @@
     flexGrow: 1;
     
 }
+@media screen 
+  and (min-device-width: 1500px) 
+  and (max-device-width: 2000px)  {
+      .tableContainer{
+          width: 30%;
+          max-height: 1225px;
+      } 
+}
 .stickyTable{
     border-radius: 20px;
-    width: 100%;
+    width: 96%;
 }
