change height into dynamic

--- a/src/component/Map/map.scss
+++ b/src/component/Map/map.scss
@@ -1,6 +1,10 @@
 .map-container{
     // background-color: white;
     // border: 1px solid gray;
+    // height:  100vh * 0.7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .title{
     text-align: center;
