--- a/src/component/Map/map.scss
+++ b/src/component/Map/map.scss
@@ -2,7 +2,7 @@
     // background-color: white;
     // border: 1px solid gray;
     // height:  100vh * 0.7;
-    display: flex;
+    // display: flex;
     justify-content: center;
     align-items: center;
 }
