--- a/src/component/Table/table.scss
+++ b/src/component/Table/table.scss
@@ -19,3 +19,24 @@
     border-radius: 20px;
     width: 96%;
 }
+.tableCellbig{
+    min-width: 130px;
+     height:50;
+     padding:4%;
+     border-right:2px solid #e5e5e5;
+}
+.tableCellsmall{
+    min-width: 100px;
+     height:50;
+     padding:4%;
+     border-right:2px solid #e5e5e5;
+}
+@media (min-width: 340px) and (max-width: 767px) {
+    .tableContainer{
+        width: 100%;
+        max-height: 400px;
+        margin-top: 20px;
+        margin-left: 10px;
+    } 
+      
+      }
