--- a/src/component/TopRate/topRate.scss
+++ b/src/component/TopRate/topRate.scss
@@ -1,200 +1,125 @@
-.topRateContainer{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    min-height: 380px   ;
+.topRateContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  min-height: 380px;
+  margin-bottom: 3%;
 }
 
-.topRateItemContainer{
-    border-radius: 5px;
-    width: 30%;
-    height: 150px;
-    margin: 5px;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-
+.topRateItemContainer {
+  border-radius: 5px;
+  width: 30%;
+  height: 150px;
+  margin: 5px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 
-.topRateItemContainerCollapse{
-    width: 100%;
-    // height: 100%;
-    // padding: 20px;
-
+.topRateItemContainerCollapse {
+  width: 100%;
+  // height: 100%;
+  // padding: 20px;
 }
-.greenProgress{
-    color: #61D16B;
-    padding-top: 20px;
-    font-size: 16px;
+.greenProgress {
+  color: #61d16b;
+  padding-top: 20px;
+  font-size: 16px;
 }
-.redProgress{
-    color: red;
-    padding-top: 20px;
-    font-size: 16px;
+.redProgress {
+  color: red;
+  padding-top: 20px;
+  font-size: 16px;
 }
-.zeroProgress{
-  color: #61D16B;
+.zeroProgress {
+  color: #61d16b;
   padding-top: 20px;
   font-size: 16px;
   left: 0;
 }
-.topRateConfirmed{
-    color: black;
-    font-size: 20px;
-    font-weight: 700;
-
+.topRateConfirmed {
+  color: black;
+  font-size: 20px;
+  font-weight: 700;
 }
-.topRateConfirmedExpand{
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-
+.topRateConfirmedExpand {
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
 }
-.topRateCountry{
+.topRateCountry {
   color: rgba($color: rgb(180, 181, 196), $alpha: 100);
-    font-size: 14px;
-    padding-top: 3px;
+  font-size: 14px;
+  padding-top: 3px;
 }
-.topRateCountryCollapse{
-  color: #F9F9FC;
+.topRateCountryCollapse {
+  color: #f9f9fc;
   font-weight: 700;
   font-size: 16px;
   padding-top: 3px;
 }
-.topRateItemContainerExpand{
-    // background-color: #6B75CA;
-    width: 100%;
-    // height: 100%;
-    // transition: 10s;
-    transition: height 350ms;
-    // padding: 20px;
-
+.topRateItemContainerExpand {
+  // background-color: #6B75CA;
+  width: 100%;
+  // height: 100%;
+  // transition: 10s;
+  transition: height 350ms;
+  // padding: 20px;
 }
-.topRateContainerCollapse{
-    background-color: white;
-    border-radius: 20px;
-    width: 22%;
-    height: auto;
-    // height: 115px;
-    margin: 5px;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    padding: 26px;
-    margin-top: 0;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-
-
+.topRateContainerCollapse {
+  background-color: white;
+  border-radius: 20px;
+  width: 22%;
+  height: auto;
+  margin: 5px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  padding: 26px;
+  margin-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
-.topRateContainerExpand{
-    background-color: #6B75CA;
-    border-radius: 20px;
-    width: 22%;
-    height: auto;
-    margin: 5px;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    padding: 26px;
-    margin-top: 0;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-
+.topRateContainerExpand {
+  background-color: #6b75ca;
+  border-radius: 20px;
+  width: 22%;
+  height: auto;
+  margin: 5px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  padding: 26px;
+  margin-top: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
-.chartContainer{
-    text-align: center;
+.chartContainer {
+  text-align: center;
 }
 
+.container {
+  position: relative;
+}
 
-:root {
-    --toggler-width: 120px;
-    --toggler-height: 40px;
-    --toggler-bg-color: #da110a;
-    --toggler-active-bg-color: #08853c;
-    --menu-starting-top: 0px;
-    --menu-ending-top: 45px;
-    --menu-width: 200px;
-    --menu-max-height: 200px;
-    --menu-bg-color: #188ddb;
-    --fade-from-color: transparent;
-    --fade-to-color: black;
-    --timeout: 350ms;
+@media (min-width: 340px) and (max-width: 767px) {
+  .topRateConfirmed {
+    font-size: 18px;
+  }
+  .topRateCountryCollapse {
+    font-size: 14px;
   }
   
-  .container {
-    position: relative;
+  .topRateContainerExpand {
+    width: 75%;
   }
-  
-  .toggler {
-    position: relative;
-    z-index: 2;
-    width: var(--toggler-width);
-    height: var(--toggler-height);
-    background-color: var(--toggler-bg-color);
-    border: none;
-    border-radius: 5px;
-    outline: none;
-    cursor: pointer;
-    transition: background-color 350ms;
+  .topRateContainerCollapse{
+    width: 75%;
+
   }
-  
-  .toggler--active {
-    background-color: var(--toggler-active-bg-color);
+  .topRateContainer{
+    min-height: 288px;
   }
-  
-  .menu {
-    position: absolute;
-    top: var(--menu-ending-top);
-    z-index: 1;
-    box-sizing: border-box;
-    width: var(--menu-width);
-    padding: 0 20px;
-    overflow: hidden;
-    background-color: var(--menu-bg-color);
-    border-radius: 5px;
-  }
-  
-  .list {
-    padding: 0;
-    list-style-type: none;
-  }
-  
-  .list-item {
-    padding: 5px 0;
-  }
-  
-  .display-enter {
-    top: var(--menu-starting-top);
-    width: var(--toggler-width);
-    max-height: var(--toggler-height);
-    color: var(--fade-from-color);
-    background-color: var(--toggler-bg-color);
-  }
-  
-  .display-enter-active {
-    top: var(--menu-ending-top);
-    width: var(--menu-width);
-    max-height: var(--menu-max-height);
-    color: var(--fade-to-color);
-    background-color: var(--menu-bg-color);
-    transition: all var(--timeout);
-  }
-  
-  .display-exit {
-    top: var(--menu-ending-top);
-    width: var(--menu-width);
-    max-height: var(--menu-max-height);
-    color: var(--fade-to-color);
-    background-color: var(--menu-bg-color);
-  }
-  
-  .display-exit-active {
-    top: var(--menu-starting-top);
-    width: var(--toggler-width);
-    max-height: var(--toggler-height);
-    color: var(--fade-from-color);
-    background-color: var(--toggler-bg-color);
-    transition: all var(--timeout);
-  }
+
+}
