--- a/src/component/Related/related.scss
+++ b/src/component/Related/related.scss
@@ -1,7 +1,7 @@
 .relatedParent{
-    margin-top: 5%;
-    margin-left: 5%;
-    display: flex;
+  
+  width: 40%;
+  padding-top:10px ;
 }
 .related-box{
     display: flex;
@@ -14,7 +14,6 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 5% 1% 0% 1%;
     width: 100%;
     background-color: white;
     border-radius: 20px;
@@ -28,8 +27,8 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin: 5% 1% 0% 1%;
-    width: 30%;
+    margin: 5% 0% 0% 1%;
+    // width: 30%;
     background-color: white;
     border-radius: 20px;
     height: 250px;
